--- a/src/components/grid/Grid.css
+++ b/src/components/grid/Grid.css
@@ -1,8 +1,23 @@
-/* ===== CATALOG ===== */
 .catalog__grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3,1fr);
-    gap: 10px;
-    justify-content: start;
+    grid-template-rows: auto;
+    gap: 10px; 
+    flex-grow: 1; 
 }
+/* @media (min-width: 1200px) {
+    .catalog__grid {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (max-width: 1199px) and (min-width: 768px) {
+    .catalog__grid {
+        grid-template-columns: repeat(3, 1fr); 
+    }
+}
+
+@media (max-width: 767px) {
+    .catalog__grid {
+        grid-template-columns: repeat(2, 1fr); 
+    }
+} */
