--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,4 +1,37 @@
 .menu {
-    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    color: var(--main-Gray);
+    font-size: var(--title);
+    font-family: "PP Neue Montreal", sans-serif;
+    font-weight: 700;
+
+    gap: 8px;
+    flex-shrink: 0;
     width: 220px;
+}
+
+.menu__elem {
+    display: flex;
+    border-radius: 8px;
+    width: auto;
+    height: auto;
+    padding: 10px;
+
+    color: var(--main-Gray);
+    font-size: var(--subtitle);
+    font-family: "PP Neue Montreal";
+    font-weight: 500; 
+    font-size: var(--subtitle);
+
+    transition: all 2ms ease-in-out;
+}
+
+.menu__elem:hover,
+.menu__elem:focus {
+    background-color: var(--alpha-Silver-15);
+}
+
+.elem__selected{
+    background-color: var(--main-White);
 }
