--- a/src/components/grid/Grid.css
+++ b/src/components/grid/Grid.css
@@ -1,23 +1,25 @@
 .catalog__grid {
     display: grid;
-    grid-template-rows: auto;
+    grid-template-columns: repeat(4, 1fr); 
     gap: 10px; 
-    flex-grow: 1; 
-}
-/* @media (min-width: 1200px) {
-    .catalog__grid {
-        grid-template-columns: repeat(4, 1fr);
-    }
-}
-
-@media (max-width: 1199px) and (min-width: 768px) {
-    .catalog__grid {
-        grid-template-columns: repeat(3, 1fr); 
-    }
+    justify-content: center; 
+    flex-grow: 1;
 }
 
 @media (max-width: 767px) {
     .catalog__grid {
-        grid-template-columns: repeat(2, 1fr); 
+        grid-template-columns: repeat(2, 1fr);
     }
-} */
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .catalog__grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (min-width: 1024px) {
+    .catalog__grid {
+        grid-template-columns: repeat(4, 1fr); 
+    }
+}
