--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -36,7 +36,7 @@
   align-items: center;
   position: relative;
   padding: 8px;
-  width: 180px;
+  width: 100%;
   height: 180px;
   border-radius: 10px;
   background-color: var(--main-Powder);
