--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -48,7 +48,6 @@
   margin-bottom: 10px;
 }
 
-
 .card__img {
     width: 100%;
     border-radius: 10px;
@@ -77,7 +76,7 @@
 .card__title {
     color: var(--main-Gray);
     font-size: var(--subtitle);
-    font-family: "PP Neue Montreal";
+    font-family: "PP Neue Montreal", sans-serif;
     font-weight: 500; 
     margin-top: 4px;
 
@@ -90,7 +89,6 @@
 /* ----- weight -----*/
 .card__weight {
     color: var(--main-Silver);
-
     font-family: "PP Neue Montreal", sans-serif;
     font-weight: 500;
     font-size: var(--note);
@@ -100,7 +98,6 @@
 .card__weight::after {
     display: inline-block; 
     content: "\00A0гр.";
-
     font-family: "PP Neue Montreal", sans-serif;
     font-weight: 500;
     font-size: var(--note);
