--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -1,42 +1,222 @@
 .cart {
     display: flex;
+    flex-direction: column;
     height: fit-content;
     padding: 10px;
-    background-color: var(--main-White); 
-    border-radius: 10px; 
-    border: 1px solid var(--alpha-Silver-15);
+    gap: 10px;
+
+    background-color: var(--main-White);
+    border-radius: 10px;
+    border: none;
+    box-shadow: inset 0 0 0 1px var(--alpha-Silver-15);
+}
+
+.cart__title {
+    color: var(--main-Gray);
+    font-size: var(--title);
+    font-family: "PP Neue Montreal", sans-serif;
+    font-weight: 700;
 }
 
 .cart__item {
     display: flex;
-    min-width: 208px;
+    align-items: stretch;
+    border-radius: 10px;
     padding: 8px;
-    align-content: flex-start;
     gap: 6px;
-    background-color: aqua;
+    cursor: pointer;
 }
 
+.cart__item:hover,
+.cart__item:focus {
+    background-color: var(--main-Stone);
+}
+
+.cart__item:hover .cart__img,
+.cart__item:focus .cart__img {
+    box-shadow: inset 0 0 0 1px var(--alpha-Silver-15);
+    background-color: var(--alpha-Silver-15);
+    transform: scale(1.02);
+}
+
+.cart__item:hover .cart__counter,
+.cart__item:focus .cart__counter {
+    background-color: var(--main-White);
+}
+
+
+/* ----- options -----*/
 .cart__options__wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-grow: 1;
-    background-color: cadetblue;
+    min-width: 0;
 }
 
 .cart__info__wrapper {
     display: flex;
     justify-content: space-between;
-    background-color: brown;
+}
+
+/* ----- image -----*/
+.cart__img__wrapper {
+    width: 93px;
+    height: 93px;
+    border-radius: 8px;
+    border: none;
+    flex-shrink: 0;
+    overflow: hidden;
 }
 
 .cart__img {
-    height: 74px;
-    width: 74px;
-    background-color: blue;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-color: var(--main-Stone);
+    transition: transform 0.3s ease;
 }
 
+/* ----- title -----*/
+.cart__item__title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+
+    color: var(--main-Gray);
+    font-family: "PP Neue Montreal", sans-serif;
+    font-weight: 500;
+    font-size: var(--note);
+}
+
+/* ----- price -----*/
+.cart__price {
+    white-space: nowrap;
+
+    color: var(--main-Gray);
+    font-family: "PP Neue Montreal", sans-serif;
+    font-weight: 500;
+    font-size: var(--note);
+}
+
+.cart__price::after {
+    display: inline-block;
+    content: "\00A0₽";
+    font-family: "PP Neue Montreal", sans-serif;
+    font-weight: 500;
+    font-size: var(--note);
+}
+
+/* ----- weight -----*/
+.cart__weight {
+    color: var(--main-Silver);
+    font-family: "PP Neue Montreal", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    margin-bottom: 6px;
+}
+
+.cart__weight::after {
+    display: inline-block;
+    content: "\00A0гр.";
+    font-family: "PP Neue Montreal", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+}
+
+/* ===== COUNTER ===== */
 .cart__counter {
-    margin-top: auto;
+    display: flex;
     align-self: flex-start;
+    align-items: center;
+    margin-top: auto;
+    white-space: nowrap;
+    gap: 14px;
+    padding: 4px;
+
+    border-radius: 6px;
+    border: none;
+    box-shadow: inset 0 0 0 1px var(--alpha-Silver-15);
+    color: var(--main-Gray);
+    background-color: var(--main-Powder);
+
+    font-family: "PP Neue Montreal", sans-serif;
+    font-weight: 500;
+    font-size: var(--note);
+    cursor: pointer;
+}
+
+/* ----- counter buttons -----*/
+.cart__counter__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background: none;
+    color: var(--main-Silver);
+    border: none;
+    cursor: pointer;
+    transition: color 0.2s ease;
+}
+
+.cart__counter__btn:hover {
+    color: var(--main-Gray)
+}
+
+/* ----- counter value -----*/
+.cart__counter__value {
+    font-size: var(--note);
+    color: var(--main-Gray)
+}
+
+/* ===== DIVIDER ===== */
+.divider {
+    background-color: var(--main-Stone);
+    height: 1px;
+    border-radius: 2px;
+    width: auto;
+}
+
+/* ===== TO ORDER ===== */
+.order__warning {
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 12px;
+    color: var(--main-Silver);
+    font-size: 14px;
+}
+
+.order__btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+    padding: 10px;
+
+    border: none;
+    box-shadow: inset 0 0 0 1px var(--alpha-Silver-15);
+    color: var(--main-Gray);
+    background-color: var(--main-Powder);
+    border-radius: 6px;
+
+    font-family: "PP Neue Montreal", sans-serif;
+    font-weight: 500;
+    font-size: var(--subtitle);
+    cursor: pointer;
+}
+
+.order__btn:hover,
+.order__btn:focus {
+    background-color: var(--alpha-Silver-15);
+}
+
+.order__total::after {
+    display: inline-block;
+    content: "\00A0₽";
+    font-family: "PP Neue Montreal", sans-serif;
+    font-weight: 500;
+    font-size: var(--subtitle);
 }
