--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -40,14 +40,26 @@ body {
     background-color: var(--main-Powder);
     font-family: "PP Neue Montreal", sans-serif;
 }
-
+/* ===== WRAPPERS ===== */
+.page__wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+    gap: 40px;
+}
+.banner__wrapper {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
 .content__wrapper {
     display: flex;
     align-items: flex-start;
     gap: 20px;
-    padding: 40px;
     background-color: var(--main-Powder);
 }
+
+
 
 .menu {
     flex-shrink: 0;
@@ -74,15 +86,15 @@ body {
 @font-face {
     font-family: "PP Neue Montreal";
     src: url("./assets/fonts/PPNeueMontreal-Medium.woff2") format("woff2"),
-         url("./assets/fonts/PPNeueMontreal-Medium.woff") format("woff");
+        url("./assets/fonts/PPNeueMontreal-Medium.woff") format("woff");
     font-weight: 500;
     font-style: normal;
-  }
-  
-  @font-face {
+}
+
+@font-face {
     font-family: "PP Neue Montreal";
     src: url("./assets/fonts/PPNeueMontreal-Bold.woff2") format("woff2"),
-         url("./assets/fonts/PPNeueMontreal-Bold.woff") format("woff");
+        url("./assets/fonts/PPNeueMontreal-Bold.woff") format("woff");
     font-weight: 700;
     font-style: normal;
-  }
+}
