--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -25,7 +25,7 @@
     font-size: var(--subtitle);
     cursor: pointer;
 
-    transition: all 2ms ease-in-out;
+    transition: background-color 2ms ease-in-out;
 }
 
 .menu__elem:hover,
