--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,30 +1,55 @@
 .header {
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     background-color: var(--main-White);
     width: 100%;
     height: 118px;
     border-radius: 0 0 20px 20px;
+    padding: 0 40px 0 40px;
+    gap: 10px;
+    border: none;
+    box-shadow: inset 0 0 0 1px var(--alpha-Silver-15);
 }
-
+/* ----- logo -----*/
+.logo {   
+    width: 226px;
+    margin-right: 30px;
+}
+/* ===== SEARCH&ADRESS ===== */
+.input__adress,
+.input__search {
+    flex: 1 1 auto;
+    max-width: 342px;
+}
+.search,
+.adress {
+    border: none;
+    outline: none;
+    flex-grow: 1;
+    background: none;
+}
 
 /* ----- search -----*/
 .input__search {
     display: flex;
-    /* flex-grow: 1; */
     align-items: center;
-    width: 25%;
     padding: 10px;
     gap: 12px;
 
-    background-color: var(--alpha-Silver-15);
+    background-color: var(--main-Powder);
     border-radius: 10px;
     border: none;
     box-shadow: inset 0 0 0 1px var(--alpha-Silver-15);
 }
 
 .input__search .icons {
-        color: var(--main-LightGray);
+    color: var(--main-LightGray);
+}
+
+.input__search:hover,
+.input__search:focus {
+    background-color: var(--alpha-Silver-15);
 }
 
 .search::placeholder {
@@ -34,12 +59,13 @@
     font-weight: 500;
 }
 
+
+
 /* ----- adress -----*/
 .input__adress {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 25%;
     padding: 10px;
     gap: 12px;
     caret-color: transparent;
@@ -56,11 +82,27 @@
     color: var(--main-Gray);
 }
 
-.adress::placeholder {
+.adress__is {
     color: var(--main-Gray);
     font-size: var(--subtitle);
     font-family: "PP Neue Montreal", sans-serif;
     font-weight: 500;
+}
+
+.adress::placeholder {
+    color: var(--main-Silver);
+    font-size: var(--subtitle);
+    font-family: "PP Neue Montreal", sans-serif;
+    font-weight: 500;
+}
+
+.change__location,
+.cancel__search {
+    display: flex;
+    justify-content: center;
+    border: none;
+    background: none;
+    cursor: pointer;
 }
 
 .input__adress:hover,
@@ -68,9 +110,26 @@
     background-color: var(--alpha-Silver-15);
 }
 
-.search,
-.adress {
+/* ----- sign in -----*/
+.sign__in {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    gap: 6px;
+    margin-left: auto;
+
+    background-color: var(--main-Powder);
+    border-radius: 6px;
     border: none;
-    outline: none;
-    background: none;
+    box-shadow: inset 0 0 0 1px var(--alpha-Silver-15);
+
+    color: var(--main-Gray);
+    font-size: var(--subtitle);
+    font-family: "PP Neue Montreal", sans-serif;
+    font-weight: 500;
+}
+
+.sign__in:hover,
+.sign__in:focus {
+    background-color: var(--alpha-Silver-15);
 }
