rework pagination&add checkboxes

--- a/src/components/grid/Grid.css
+++ b/src/components/grid/Grid.css
@@ -23,3 +23,9 @@
         grid-template-columns: repeat(4, 1fr); 
     }
 }
+
+@media (min-width: 1400px) {
+    .catalog__grid {
+        grid-template-columns: repeat(5, 1fr); 
+    }
+}
