--- a/src/components/pagination/Pagination.css
+++ b/src/components/pagination/Pagination.css
@@ -8,16 +8,22 @@
     font-weight: 500; 
     font-size: var(--subtitle);
 }
-.pagination__pages {
+.pagination__items {
     display: flex;
     gap: 10px;
 }
 
-.pagination__pages a {
-    margin: 0 10px 0 10px;
+.pagination__items a {
+    padding: 10px;
     color: var(--main-Gray);
     text-decoration: none;
     transition: color 0.2s ease-in-out;
+}
+
+.item__active {
+    border: none;
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 1px var(--alpha-Silver-15);
 }
 
 .pagination__pages a:hover,
