--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -4,7 +4,7 @@
     justify-content: flex-start;
     background-color: var(--main-White);
     width: 100%;
-    height: 118px;
+    height: 16vh;
     border-radius: 0 0 20px 20px;
     padding: 0 40px 0 40px;
     gap: 10px;
