--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,7 +1,49 @@
 .footer {
     display: flex;
-    height: 40vh;
+    flex-direction: column;
+    gap: 10px;
     border-radius: 20px 20px 0px 0px;
+    font-family: "PP Neue Montreal", sans-serif;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.00) 94.14%, rgba(0, 0, 0, 0.05) 100%), var(--main-Powder);
     padding: 40px;
+}
+
+.footer__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.footer__links {
+    display: flex;
+    gap: 8vw;
+    justify-content: space-between;
+}
+
+.footer__faq,
+.footer__socials {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    list-style: none;
+    color: var(--main-Silver);
+    font-size: var(--subtitle);
+    font-weight: 500;
+    padding: 0;
+    margin: 0;
+}
+
+.footer__faq li:hover,
+.footer__faq li:focus,
+.footer__socials li:hover,
+.footer__socials li:focus {
+    color: var(--main-LightGray);
+    cursor: pointer;
+}
+
+.footer__copyright {
+    align-self: flex-start;
+    color: var(--main-Silver);
+    font-size: var(--subtitle);
+    font-weight: 500;
 }
