--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -64,18 +64,9 @@ h3 {
     flex-direction: column;
     padding: 40px;
     gap: 40px;
+    /* align-items:center ; */
 }
-.banner__wrapper {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-}
-.content__wrapper {
-    display: flex;
-    align-items: flex-start;
-    gap: 20px;
-    background-color: var(--main-Powder);
-}
+
 /* ===== MENU ===== */
 .menu {
     flex-shrink: 0;
