--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -47,3 +47,19 @@
     font-size: var(--subtitle);
     font-weight: 500;
 }
+
+.footer__logo {
+    display: block;
+    justify-content:center;
+    width: 100%;
+    height: auto;
+}
+
+@media (max-width: 767px) {
+    .footer__faq,
+    .footer__socials,
+    .footer__copyright {
+    font-size: 14px;
+}
+
+}
