--- a/src/components/grid/Grid.css
+++ b/src/components/grid/Grid.css
@@ -3,7 +3,6 @@
     grid-template-columns: repeat(4, 1fr); 
     gap: 10px; 
     justify-content: center; 
-    flex-grow: 1;
 }
 
 .page-tint {
@@ -12,8 +11,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent dark background */
-    z-index: 999; /* Ensure it's on top of the page */
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 999; 
   }
   
   .modal {
