--- a/src/pages/check-out/Checkout.css
+++ b/src/pages/check-out/Checkout.css
@@ -1,5 +1,6 @@
 .checkout {
     display: flex;
+    width: 100%;
     flex-direction: row;
     gap: 20px;
     font-family: "PP Neue Montreal", sans-serif;
@@ -7,6 +8,7 @@
 
 .checkout__cart {
     display: flex;
+    width: 100%;
     padding: 10px;
     flex-direction: column;
     background-color: var(--main-White);
@@ -18,6 +20,7 @@
 /* ===== ТОВАР ===== */
 .cart__item {
     display: flex;
+    width: 100%;
     flex-direction: row;
 }
 .cart__wrapper {
@@ -28,6 +31,7 @@
 }
 .item__wrapper {
     display: flex;
+    width: 100%;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -78,6 +82,7 @@
 /* ===== ИТОГО ===== */
 .checkout__sum {
     display: flex;
+    width: 100%;
     padding: 10px;
     flex-direction: column;
     background-color: var(--main-White);
@@ -137,9 +142,9 @@
 .sum__map {
     display: flex;
     align-self: stretch;
-    height: 300px;
-    width: 600px;
     align-items: flex-end;
+    width: 100%;
+    height: 100%;
     padding: 10px;
     background-color: var(--main-Powder);
     border-radius: 10px;
