--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -56,10 +56,21 @@
 }
 
 @media (max-width: 767px) {
+    .footer{
+        gap: 40px;
+    }
     .footer__faq,
     .footer__socials,
     .footer__copyright {
-    font-size: 14px;
+    gap: 16px;
+    font-size: 16px;
+}
+.footer__wrapper,
+.footer__links{
+    flex-direction: column;
 }
 
+.footer__wrapper {
+    gap: 40px
+}
 }
