--- a/src/pages/auth/Auth.css
+++ b/src/pages/auth/Auth.css
@@ -31,12 +31,26 @@
 .auth__link {
     text-decoration: none;
     color: var(--main-Silver);
+    border: none;
+    background: none;
+    padding-bottom: 10px;
+    transition: color 0.2s ease-in-out;
+}
+
+.auth__link:hover,
+.auth__link:focus {
+    color: var(--main-LightGray);
+}
+.auth__link:hover .auth__arrow,
+.auth__link:focus .auth__arrow {
+    color: var(--main-LightGray);
 }
 
 .auth__arrow {
     color: var(--main-Silver);
     width: 10px;
     height: 10px;
+    transition: color 0.2s ease-in-out;
 }
 
 .auth__input {
@@ -45,6 +59,12 @@
     border-radius: 6px;
     border: none;
     box-shadow: inset 0 0 0 1px var(--alpha-Silver-15);
+    transition: border 0.3s ease-in-out;
+    outline: none;
+}
+
+.auth__input:focus {
+    border: 0.5px solid var(--main-LightGray);
 }
 
 .auth__btn {
@@ -70,8 +90,37 @@
 .auth__btn:hover {
     background-color: var(--alpha-Silver-15);
 }
-.auth__agreement {
+.agreement {
     display: flex;
-    gap: 20px;
-    flex-direction: row-reverse;
 }
+
+.agreement-text {
+    color: var(--main-Silver);
+}
+.agreement-link {
+    color: var(--main-LightGray);
+}
+
+.align {
+    display: flex;
+    align-items:center ;
+}
+
+progress {
+    border: none;
+
+  }
+  progress::-webkit-progress-bar {
+    background-color: var(--main-Stone);
+    height: 4px;
+  }
+  progress::-webkit-progress-value {
+    background-color: var(--accent-Green);
+    border-radius: 10px;
+  }
+  progress::-moz-progress-bar {
+    background-color: var(--main-Stone);
+    height: 4px;
+    border-radius: 10px;
+  }
+  
