--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -139,9 +139,19 @@
     align-items: center;
     border-radius: 6px;
     border: none;
-    box-shadow: inset 0 0 0 1px var(--alpha-Silver-15);
     color: var(--main-Gray);
     background: none;
+    cursor: pointer;
+}
+
+.burger__menu:focus,
+.burger__menu:hover {
+    color: var(--main-LightGray);
+}
+
+.burger {
+    width: 32px;
+    height: 32px;
 }
 
 @media (min-width: 320px) and (max-width: 1023px) {
